# dbSqlite_sqlalchemy

./: README.md
bd_python/: example.db  pyproject.toml  script.py
