[project]
name = "bd-python"
version = "0.1.0"
description = ""
authors = [
    {name = "RerissonHRS",email = "rerisson.rodrigues@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
